# Yomeru

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  bump-version.sh  deploy.sh
.cargo/: config.toml
.claude/skills/bump-version/: SKILL.md
.claude/skills/commit-with-jj/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: README.md
app/android/: Cargo.toml
app/android/src/: lib.rs  main.rs
app/extension/: Cargo.toml
app/extension/src/: bridge.rs  dict_msg.rs  lib.rs  settings_msg.rs
app/shared/: Cargo.toml
app/shared/src/: api.rs  app.rs  components.rs  dict.rs  idb.rs  lib.rs  platform.rs  settings.rs  srs.rs  sync.rs  theme.rs  types.rs
app/shared/src/routes/: about.rs  lookup.rs  mod.rs  new_words.rs  review.rs  settings.rs  stats.rs  word_list.rs
app/web/: Cargo.toml  Dioxus.toml  Dockerfile  README.md
app/web/src/: main.rs
crates/deinflect/: Cargo.toml
crates/deinflect/benches/: deinflect_bench.rs
crates/deinflect/src/: lib.rs  rules.rs
crates/examples-build/: Cargo.toml
crates/examples-build/src/: main.rs
crates/examples-core/: Cargo.toml
crates/examples-core/src/: lib.rs
crates/examples-types/: Cargo.toml
crates/examples-types/src/: lib.rs
crates/examples-wasm/: Cargo.toml
crates/examples-wasm/src/: lib.rs
crates/japanese-utils/: Cargo.toml
crates/japanese-utils/benches/: japanese_utils_bench.rs
crates/japanese-utils/src/: char_class.rs  lib.rs  text_range.rs
crates/jmdict-build/: Cargo.toml
crates/jmdict-build/src/: indexer.rs  main.rs  parser.rs  serializer.rs
crates/jmdict-core/: Cargo.toml
crates/jmdict-core/benches/: lookup_bench.rs  real_dict_bench.rs
crates/jmdict-core/src/: dictionary.rs  lib.rs  lookup.rs  tests.rs
crates/jmdict-types/: Cargo.toml
crates/jmdict-types/src/: archived_serde.rs  entry.rs  lib.rs  pos.rs
crates/jmdict-wasm/: Cargo.toml
crates/jmdict-wasm/benches/: lookup_bench.rs
crates/jmdict-wasm/src/: dictionary.rs  lib.rs  lookup.rs  tests.rs
crates/kanjidic-build/: Cargo.toml
crates/kanjidic-build/src/: main.rs  parser.rs  serializer.rs
crates/kanjidic-core/: Cargo.toml
crates/kanjidic-core/src/: lib.rs
crates/kanjidic-types/: Cargo.toml
crates/kanjidic-types/src/: lib.rs
crates/kanjidic-wasm/: Cargo.toml
crates/kanjidic-wasm/src/: dictionary.rs  lib.rs
crates/srs-core/: Cargo.toml
crates/srs-core/src/: card.rs  fsrs.rs  lib.rs  scheduler.rs  sm2.rs
crates/srs-wasm/: Cargo.toml
crates/srs-wasm/src/: lib.rs
extension/: manifest.json  options-dx-loader.js  options.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts  web-ext-config.cjs
extension/background/: background.js
extension/content/: content.js
extension/options/: options.html  options.js
extension/src/background/: background.test.ts  background.ts  cards-backup.test.ts  cards-backup.ts  idb.test.ts  idb.ts  review-utils.ts  settings.test.ts  settings.ts
extension/src/content/: EntryCard.svelte  ExamplesTab.svelte  KanjiTab.svelte  Popup.svelte  WordTab.svelte  content.ts  detector.ts  highlight.ts  popup-store.ts  popup.css.ts  srs-highlighter.ts
extension/src/options/: AboutTab.svelte  LookupEntry.svelte  LookupTab.svelte  NewWordsTab.svelte  Options.svelte  ReviewTab.svelte  SettingsTab.svelte  WordListTab.svelte  db-watch.ts  dict-lookup.ts  lookup-history.ts  main.ts  romaji.test.ts  romaji.ts
extension/src/shared/: dict.ts  types.ts
server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/src/: api.rs  config.rs  db.rs  dicts.rs  main.rs
xtask/: Cargo.toml  Dockerfile  dict-sources.env  docker-entrypoint.sh
xtask/src/: main.rs
