[workspace]
resolver = "2"
members = [
    "crates/japanese-utils",
    "crates/jmdict-types",
    "crates/jmdict-build",
    "crates/jmdict-wasm",
    "crates/kanjidic-types",
    "crates/kanjidic-build",
    "crates/kanjidic-wasm",
    "crates/deinflect",
    "crates/srs-core",
    "crates/srs-wasm",
    "xtask",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release.package.jmdict-build]
opt-level = 3

[profile.release.package.kanjidic-build]
opt-level = 3

[profile.release.package.xtask]
opt-level = 3

[profile.bench]
inherits = "release"
opt-level = 3
