[workspace]
resolver = "2"
members = [
    "server",
    "crates/japanese-utils",
    "crates/jmdict-types",
    "crates/jmdict-build",
    "crates/jmdict-core",
    "crates/jmdict-wasm",
    "crates/kanjidic-types",
    "crates/kanjidic-build",
    "crates/kanjidic-core",
    "crates/kanjidic-wasm",
    "crates/examples-types",
    "crates/examples-build",
    "crates/examples-core",
    "crates/examples-wasm",
    "crates/deinflect",
    "crates/srs-core",
    "crates/srs-wasm",
    "app/shared",
    "app/web",
    "app/android",
    "app/extension",
    "xtask", "crates/examples-generator",
]
default-members = [
    "server",
    "crates/japanese-utils",
    "crates/jmdict-types",
    "crates/jmdict-build",
    "crates/jmdict-core",
    "crates/jmdict-wasm",
    "crates/kanjidic-types",
    "crates/kanjidic-build",
    "crates/kanjidic-core",
    "crates/kanjidic-wasm",
    "crates/examples-types",
    "crates/examples-build",
    "crates/examples-core",
    "crates/examples-wasm",
    "crates/deinflect",
    "crates/srs-core",
    "crates/srs-wasm",
    "app/shared",
    "app/web",
    "xtask",
]

[workspace.lints.rust]
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"
lint_groups_priority = "allow"
new_without_default = "allow"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
# Strip DWARF debug info from release artifacts. wasm-opt (binaryen) chokes
# on the DWARF emitted by recent rustc versions ("compile unit size was
# incorrect"); stripping debuginfo sidesteps that and shrinks the wasm too.
strip = "debuginfo"

[profile.release.package.jmdict-build]
opt-level = 3

[profile.release.package.kanjidic-build]
opt-level = 3

[profile.release.package.examples-build]
opt-level = 3

[profile.release.package.xtask]
opt-level = 3

[profile.bench]
inherits = "release"
opt-level = 3
