[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yomeru-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
# Force the bundled libsqlite3-sys so users don't need a system SQLite to build.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8"
governor = { version = "0.6", features = ["dashmap"] }
anyhow = "1"
dotenvy = "0.15"

# Dict crates — used for in-process JMdict/KANJIDIC/examples lookup.
jmdict-types   = { path = "../crates/jmdict-types" }
kanjidic-types = { path = "../crates/kanjidic-types" }
examples-types = { path = "../crates/examples-types" }
jmdict-core    = { path = "../crates/jmdict-core" }
kanjidic-core  = { path = "../crates/kanjidic-core" }
examples-core  = { path = "../crates/examples-core" }

[lints]
workspace = true
