[package]
name = "yomeru-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7.9", features = ["web"] }
yomeru-shared = { path = "../shared" }

jmdict-types   = { path = "../../crates/jmdict-types" }
kanjidic-types = { path = "../../crates/kanjidic-types" }
examples-types = { path = "../../crates/examples-types" }

wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
serde-wasm-bindgen    = "0.6"
js-sys                = "0.3"

serde      = { version = "1", features = ["derive"] }
log        = { version = "0.4", features = ["release_max_level_off"] }
console_error_panic_hook = "0.1"
async-trait = "0.1.89"

[lints.rust]
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

[lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"
lint_groups_priority = "allow"
new_without_default = "allow"
