[package]
name = "yomeru-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7.9", features = ["web"] }
yomeru-shared = { path = "../shared" }

jmdict-types   = { path = "../../crates/jmdict-types" }
kanjidic-types = { path = "../../crates/kanjidic-types" }
examples-types = { path = "../../crates/examples-types" }

wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
serde-wasm-bindgen    = "0.6"
js-sys                = "0.3"

serde      = { version = "1", features = ["derive"] }
log        = { version = "0.4", features = ["release_max_level_off"] }
console_error_panic_hook = "0.1"
async-trait = "0.1.89"

[lints]
workspace = true
