[package]
name = "yomeru-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "web"] }
manganis = "0.7.9"

# Yomeru types — shared serde shapes for server JSON. Dict lookup itself
# lives on the server, so the heavy *-wasm crates are intentionally not
# pulled in here.
jmdict-types     = { path = "../../crates/jmdict-types" }
kanjidic-types   = { path = "../../crates/kanjidic-types" }
examples-types   = { path = "../../crates/examples-types" }
srs-core         = { path = "../../crates/srs-core" }

# Web glue (Dioxus web is wasm32)
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlAnchorElement",
    "Location",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
] }
gloo-net     = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-timers  = { version = "0.3", features = ["futures"] }
idb          = "0.6"

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde-wasm-bindgen = "0.6"
log           = "0.4"
console_error_panic_hook = "0.1"
async-trait = "0.1.89"


[lints]
workspace = true
