[package]
name = "examples-wasm"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
examples-types       = { path = "../examples-types" }
wasm-bindgen         = "0.2"
serde-wasm-bindgen   = "0.6"
postcard             = { version = "1", features = ["alloc"] }
once_cell            = "1"
serde                = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
anyhow               = "1"
