[package]
name = "examples-wasm"
version = "0.9.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
examples-core            = { path = "../examples-core" }
wasm-bindgen             = "0.2"
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = "0.1"

[lints]
workspace = true
