[package]
name = "japanese-utils"
version = "0.2.0"
edition = "2024"

[dependencies]
unicode-segmentation = "1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "japanese_utils_bench"
harness = false
