[package]
name = "jmdict-build"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "jmdict-build"
path = "src/main.rs"

[features]
full = ["jmdict-types/full"]

[dependencies]
jmdict-types = { path = "../jmdict-types" }
quick-xml    = { version = "0.37", features = ["encoding"] }
serde        = { version = "1", features = ["derive"] }
postcard     = { version = "1", features = ["alloc"] }
fst          = "0.4"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
