[package]
name = "jmdict-core"
version = "0.7.0"
edition = "2024"

[features]
# Re-export builders/parsers used by tests + benches. Kept off by default so
# downstream native consumers don't pull in dev-only bits.
test-utils = []

[dependencies]
jmdict-types   = { path = "../jmdict-types" }
japanese-utils = { path = "../japanese-utils" }
deinflect      = { path = "../deinflect" }
postcard       = { version = "1", features = ["alloc"] }
# Zero-copy decode of dictionary entries. Repr pinned to match the builder
# (jmdict-build) and the wasm reader (jmdict-wasm) — see jmdict-types/Cargo.toml.
rkyv = { version = "0.8", default-features = false, features = [
    "alloc",
    "bytecheck",
    "pointer_width_32",
    "little_endian",
    "unaligned",
] }
fst            = "0.4"
once_cell      = "1"
anyhow         = "1"

[dev-dependencies]
criterion    = { version = "0.5", features = ["html_reports"] }
# Tests construct WordEntry literals that include the optional fields.
jmdict-types = { path = "../jmdict-types", features = ["full"] }
# real_dict_bench's batch_to_json variant measures the server/extension edge.
serde_json   = "1"

[[bench]]
name = "lookup_bench"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "real_dict_bench"
harness = false

[lints]
workspace = true
