[package]
name = "jmdict-wasm"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lookup_bench"
harness = false
required-features = ["test-utils"]

[dependencies]
jmdict-types      = { path = "../jmdict-types" }
japanese-utils    = { path = "../japanese-utils" }
deinflect         = { path = "../deinflect" }
wasm-bindgen      = "0.2"
js-sys            = "0.3"
serde-wasm-bindgen = "0.6"
postcard          = { version = "1", features = ["alloc"] }
fst               = "0.4"
once_cell         = "1"
wasm-logger       = "0.2"
log               = "0.4"
serde             = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
anyhow = "1.0.102"
