[package]
name = "jmdict-wasm"
version = "0.8.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jmdict-core       = { path = "../jmdict-core" }
jmdict-types      = { path = "../jmdict-types" }
japanese-utils    = { path = "../japanese-utils" }
wasm-bindgen      = "0.2"
js-sys            = "0.3"
serde-wasm-bindgen = "0.6"
wasm-logger       = "0.2"
log               = "0.4"
serde             = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
