[package]
name = "kanjidic-wasm"
version = "0.8.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kanjidic-core            = { path = "../kanjidic-core" }
kanjidic-types           = { path = "../kanjidic-types" }
wasm-bindgen             = "0.2"
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = "0.1"
