[package]
name = "srs-wasm"
version = "0.4.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
srs-core          = { path = "../srs-core" }
wasm-bindgen      = "0.2"
serde-wasm-bindgen = "0.6"
js-sys            = "0.3"
wasm-logger       = "0.2"
log               = "0.4"
console_error_panic_hook = "0.1"
